# reconning-machine

./: MANIFEST.in  README.md  pyproject.toml
src/reconning_machine/: cli.py  config.py  githf.py  machina.yaml
src/reconning_machine/providers/: camelids.py  castor_pollux.py  depsek.py  electroid.py  openai.py  qrog.py  strangelove.py
tests/: test_cli.py  test_e2e.py  test_llm_soup.py  test_utilities.py
